--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kevzettler/parse-magica-voxel.git"
+    "url": "git+https://github.com/matthewjosephtaylor/magica-voxels.git"
   },
   "keywords": [
     "Vox",
@@ -22,12 +22,12 @@
     "loader",
     "parser"
   ],
-  "author": "kevzettler",
+  "author": "kevzettler,@mjtdev",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kevzettler/parse-magica-voxel/issues"
+    "url": "https://github.com/matthewjosephtaylor/magica-voxels/issues"
   },
-  "homepage": "https://github.com/kevzettler/parse-magica-voxel#readme",
+  "homepage": "https://github.com/matthewjosephtaylor/magica-voxels#readme",
   "dependencies": {
     "buffer": "^5.7.1"
   },
